--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar stuff: Same on all tabs -->
     <div class="navbar">
         <div class="navbarRate">
-          <a class = "active" href="#RatePEA">RatePEA</a>
+          <a class = "active" href="index.html">RatePEA</a>
         </div>
         
         <div class="subnav">
@@ -98,20 +98,22 @@
         </div>
 
         <div class="NewPost">
-          <b href="#New Post">New Post</b>
+          <b href="newpost.html">New Post</b>
         </div>
       </div>
     
       <!-- Everything on the page -->
-        <h1>
+        <h6>
             RatePEA<span>2023</span>
-        </h1>
+        </h6>
 
         <h3>
-            Search Course:
+            <a>Search Course:</a>
         </h3>
         <form>
+          <div class="index">
             <input type="text" id="coursesearch" onkeyup="filtercourses()" name="coursesearch" placeholder="Search here.."><br>
+          </div>
         </form>
 
         <!-- Adding the add course and filter course functions/classes -->
