--- a/newpost.html
+++ b/newpost.html
@@ -11,7 +11,7 @@
     <!-- Navbar stuff: Same on all tabs -->
     <div class="navbar">
       <div class="RatePEA">
-        <a class = "active" href="#RatePEA">RatePEA</a>
+        <a href="index.html">RatePEA</a>
       </div>
       
       <div class="subnav">
@@ -109,7 +109,9 @@
                  <th>
                   <br>
                   <label class="labelsf" for="username">Username:</label>
+                  <div class="ids">
                   <input type="text" id="username" name="username" placeholder="Create a username ...">
+                  </div>
                   <br>
                 </th>
               </table>
@@ -153,7 +155,9 @@
                 <th>
                   <br>
                   <label class="labelsf" for="teachername">Teacher's first and last name:</label>
+                  <div class="ids">
                   <input type="text" id="teachername" name="teachername" placeholder="Enter name...">
+                  </div>
                   <br>
                 </th>
               </table>
@@ -163,7 +167,9 @@
                 <th>
                   <br>
                   <label class="labelsf" for="comments">Comments and Review (How did you enjoy the course? Would you recomend it to others?)<br></label>
+                  <div class="ids">
                   <textarea rows="5" cols="40" id = "comments" name = "comments"> </textarea>
+                  </div>
                   <br>
                 </th>
               </table>
