--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
     <!-- Navbar stuff: Same on all tabs -->
     <div class="navbar">
-        <div class="navbarRate">
-          <a class = "active" href="index.html">RatePEA</a>
-        </div>
+        <a class = "active" href="index.html">RatePEA</a>
         
         <div class="subnav">
           <button class="subnavbtn">Art</button>
@@ -97,9 +95,8 @@
           </div>
         </div>
 
-        <div class="NewPost">
-          <b href="newpost.html">New Post</b>
-        </div>
+        <b class = "active" href="newpost.html">New Post</b>
+
       </div>
     
       <!-- Everything on the page -->
