--- a/newpost.html
+++ b/newpost.html
@@ -10,7 +10,7 @@
 
     <!-- Navbar stuff: Same on all tabs -->
     <div class="navbar">
-      <a class = "active" href="index.html">RatePEA</a>
+      <a href="index.html">RatePEA</a>
       
       <div class="subnav">
         <button class="subnavbtn">Art</button>
@@ -91,7 +91,7 @@
         </div>
       </div>
 
-      <b class = "active" href="newpost.html">New Post</b>
+      <a href class ="active" href="newpost.html">New Post </a>
 
     </div>
 
