--- a/course.html
+++ b/course.html
@@ -12,11 +12,9 @@
             </style>
     </head>
 
-    <!-- Navbar stuff: Same on all tabs -->
+    <!-- Navbar stuff: Basically same on all tabs -->
     <div class="navbar">
-      <div class="RatePEA">
-        <a class = "active" href="#RatePEA">RatePEA</a>
-      </div>
+      <a href="index.html">RatePEA</a>
       
       <div class="subnav">
         <button class="subnavbtn">Art</button>
@@ -97,9 +95,7 @@
         </div>
       </div>
 
-      <div class="NewPost">
-        <b href="#New Post">New Post</b>
-      </div>
+      <a href="newpost.html">New Post </a>
     </div>
 
     <!-- Course Info -->
