--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             Rate PEA 
         </title>
         <link rel="icon" href="favicon.ico" type="image/x-icon" >
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     </head> 
 
     <!-- Adding the courses to the page -->
