--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
         <div id="allcourses"></div>
         <script src="addcourses.js"></script>
         <script src="filtercourses.js"></script>
+        <script src="clickedoncourse.js"></script>
     </body>
 </html>
 
