--- a/chosencategory.html
+++ b/chosencategory.html
@@ -17,7 +17,7 @@
         <a class = "active" href="index.html">RatePEA</a>
         
         <div class="subnav">
-          <button class="subnavbtn">Art</button>
+          <button class="subnavbtn" href="#a">Art</button>
           <div class="subnav-content">
               <a href="#a2">200s</a>
               <a href="#a3">300s</a>
@@ -99,6 +99,7 @@
 
       </div>
 
+      <!--might need to ditch the subnavbar ask brodsky about how i would do that-->
         <!-- Adding the add course and filter course functions/classes -->
         <div id="allcourses"></div>
         <script src="addcourses.js"></script>
