--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         </h3>
         <form>
           <div class="index">
+            <!-- Allowing search bar function -->
             <input type="text" id="coursesearch" onkeyup="filtercourses()" name="coursesearch" placeholder="Search here.."><br>
           </div>
         </form>
