--- a/newpost.html
+++ b/newpost.html
@@ -136,6 +136,7 @@
                   <label class="labelsf" for="term">Term you took the course:</label>               
                   <div class = "datalist">
                     <input list = "term" placeholder="Search for Term">
+                    <!-- Datalist allows for seach and select -->
                     <datalist id="term">
                       <option value="Fall2020"></option>
                       <option value="Winter2020"></option>
