--- a/course.html
+++ b/course.html
@@ -116,6 +116,7 @@
           Description: xxx
         </h4>
     <div id="allreviews"></div>
+    <!-- Adding course reviews to course page -->
     <script src="addcoursereviews.js"></script>
   </body>
     </body>
