--- a/course.html
+++ b/course.html
@@ -13,11 +13,35 @@
     </head>
     <body onload="addcoursereviews()">
     <!-- Navbar stuff: Basically same on all tabs -->
-    <div class="navbar">
-      <a href="index.html">RatePEA</a>
+    <script> 
+      function art() { 
+        window.location = "chosencategory.html"; 
+      }
+      function english() { 
+        window.location = "chosencategory.html"; 
+      }
+      function history() { 
+        window.location = "chosencategory.html"; 
+      }
+      function language() { 
+        window.location = "chosencategory.html"; 
+      }
+      function math() { 
+        window.location = "chosencategory.html"; 
+      }
+      function religion() { 
+        window.location = "chosencategory.html"; 
+      }
+      function science() { 
+        window.location = "chosencategory.html"; 
+      }
+   </script>
+  <!-- Navbar stuff: Same on all tabs -->
+  <div class="navbar">
+      <a class = "active" href="index.html">RatePEA</a>
       
       <div class="subnav">
-        <button class="subnavbtn">Art</button>
+        <button class="subnavbtn" onclick = "art()">Art</button>
         <div class="subnav-content">
             <a href="#a2">200s</a>
             <a href="#a3">300s</a>
@@ -28,7 +52,7 @@
       </div>
 
       <div class="subnav">
-        <button class="subnavbtn">English</button>
+        <button class="subnavbtn" onclick = "art()">English</button>
         <div class="subnav-content">
           <a href="#eg">General</a>
           <a href="#ee">Electives</a>
@@ -36,7 +60,7 @@
       </div>
 
       <div class="subnav">
-        <button class="subnavbtn">History</button>
+        <button class="subnavbtn" onclick = "history()">History</button>
         <div class="subnav-content">
             <a href="#h2">200s</a>
             <a href="#h3">300s</a>
@@ -47,7 +71,7 @@
       </div>
 
       <div class="subnav">
-        <button class="subnavbtn">Langauge</i></button>
+        <button class="subnavbtn" onclick = "language()">Langauge</i></button>
         <div class="subnav-content">
           <a href="#lspa">Spanish</a>
           <a href="#lfre">French</a>
@@ -63,7 +87,7 @@
       </div>
 
       <div class="subnav">
-        <button class="subnavbtn">Math</button>
+        <button class="subnavbtn" onclick = "art()">Math</button>
         <div class="subnav-content">
           <a href="#m1">100s</a>
           <a href="#m2">200s</a>
@@ -75,7 +99,7 @@
       </div>
 
       <div class="subnav">
-        <button class="subnavbtn">Religion</button>
+        <button class="subnavbtn" onclick = "religion()">Religion</button>
         <div class="subnav-content">
           <a href="#r2">200s</a>
           <a href="#r3">300s</a>
@@ -86,7 +110,7 @@
       </div>
 
       <div class="subnav">
-        <button class="subnavbtn">Science</button>
+        <button class="subnavbtn" onclick = "science()">Science</button>
         <div class="subnav-content">
           <a href="#sbio">Biology</a>
           <a href="#schem">Chemistry</a>
@@ -95,9 +119,9 @@
         </div>
       </div>
 
-      <a href="newpost.html">New Post </a>
-    </div>
+      <a href="newpost.html">New Post</a>
 
+    </div>
     <!-- Course Info -->
     <!-- I'm not sure how we are going to be able to plug in the actual data here, I'm just putting text as a filler-->
         <h2>
